sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: type mismatch;
 found   : Int(10)
 required: scala.collection.generic.CanBuildFrom[Nothing,Int,?]
 for (i <- 0 to 1 to 10) {
                     ^